--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -56,6 +56,7 @@ settings
           {% endif %}
           Use dark theme
         </label>
+        <i class="far fa-lightbulb"></i>
       </div>
     </div>
   </form>
