--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -57,6 +57,7 @@
                 <input type="hidden" name="date" value="{{ episode.pubDate }}" />
                 <input type="hidden" name="podid" value="{{ podcast.podid }}" />
                 <input type="hidden" name="length" value="{{ episode.length }}" />
+                <input type="hidden" name="summary" value="{{ episode.summary }}" />
                 <button class="btn-dope play-button active" type="submit">
                   Play
                 </button>
