--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,4 +1,4 @@
-<a class="logo-wrapper index-link nav-link-dope noselect" href="/">
+<a class="logo-wrapper index-link nav-link-dope" href="/">
   <span class="logo logo-1">d</span>
   <span class="logo logo-2">o</span>
   <span class="logo logo-3">p</span>
