--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -3,7 +3,7 @@
     <i class="fas fa-bars icon"></i>
   </a>
 </div>
-<div class="col-auto col-md-2" id="navbar-c">
+<div class="col-auto col-md-2 color-1-trans" id="navbar-c">
   {% include 'logo.html' %}
 </div>
 <div class="col-auto col-md-5" id="navbar-r">
