--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -8,8 +8,11 @@ dopepod
 <div class="col" id="login">
   <div id="login-wrapper">
     <h1>
-      Search for and listen to thousands of free podcasts on dopepod
+      Search for and listen to thousands of free podcasts on
     </h1>
+    <div class="logo-drop">
+      {% include 'logo.html' %}
+    </div>
     <div class="tab-content">
       {% if view == 'signup' %}
         <div class="tab-pane fade" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
