--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -10,8 +10,13 @@ dopepod
     <h1>
       Search for and listen to thousands of free podcasts on
     </h1>
-    <div class="logo-drop">
-      {% include 'logo.html' %}
+    <div class="splash-logo noselect color-3">
+      <span class="char char-1">d</span>
+      <span class="char char-2">o</span>
+      <span class="char char-3">p</span>
+      <span class="char char-4">e</span>
+      <span class="char char-5">p</span>
+      <span class="char char-6">o</span>
     </div>
     <div class="tab-content">
       {% if view == 'signup' %}
