--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -5,102 +5,26 @@ Listen to episodes of {{ podcast.title }} on dopepod
 {% endblock %}
 
 {% block center-stage %}
-<div class="col-4" id="showpod-l">
-  <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}360x360bb.jpg&w=360&h=360&t=absolute" />
-  <ul class="showpod-side-list d-block d-lg-none">
-      {% if podcast.global_rank %}
+<div class="col results">
+  <div class="row" id="showpod">
+    <div class="col-4" id="showpod-l">
+      <!-- BADGE -->
+      <div class="showpod-badge">
+        <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}360x360bb.jpg&w=360&h=360&t=absolute" />
+      </div>
+      <ul class="showpod-side-list d-block d-lg-none">
+        {% if podcast.global_rank %}
         <li>
           <span class="global_rank">
             #{{ podcast.global_rank }} in
             podcasts
           </span>
         </li>
-      {% endif %}
-      {% if podcast.genre_rank %}
+        {% endif %}
+        {% if podcast.genre_rank %}
         <li>
           <span class="genre_rank">
             #{{ podcast.genre_rank }} in
-              {% if podcast.genre.supergenre %}
-              <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
-                {{ podcast.genre.supergenre }}
-              </a>
-              {% else %}
-              <a href="/charts/?genre={{ podcast.genre.url_format }}">
-                {{ podcast.genre }}
-              {% endif %}
-            </a>
-          </span>
-        </li>
-      {% endif %}
-      <li>
-        <span class="n_subscribers">
-          {{ podcast.n_subscribers }}
-        </span>
-        <span class="subscriber">
-          subscriber{{ podcast.n_subscribers|pluralize }}
-        </span>
-      </li>
-      <li>
-        <span>
-          Language:
-        </span>
-        <span class="showpod-language">
-          {{ podcast.language }}
-        </span>
-      </li>
-      <li>
-        <span>
-          Content:
-        </span>
-        <span class="showpod-explicit">
-          {% if podcast.explicit %}
-          explicit
-          {% else %}
-          clean
-          {% endif %}
-        </span>
-      </li>
-      <li>
-        <em>
-          <span class="showpod-copyright">
-            {{ podcast.copyrighttext }}
-          </span>
-        </em>
-      </li>
-    </ul>
-</div>
-<div class="col-8 col-lg-6" id="showpod-c" data-podid="{{ podcast.podid }}">
-  <div class="logo-drop">
-    <a class="showpod" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-      <h1 id="showpod-title">
-        {{ podcast.title }}
-      </h1>
-    </a>
-  </div>
-  <h2 id="showpod-artist">
-    <span>
-      By
-    </span>
-    {{ podcast.artist }}
-  </h2>
-  <p id="showpod-description">
-    {{ podcast.description }}
-  </p>
-</div>
-<div class="col-lg-2 d-none d-lg-block" id="showpod-r">
-  <ul class="showpod-side-list">
-    {% if podcast.global_rank %}
-      <li>
-        <span class="global_rank">
-          #{{ podcast.global_rank }} in
-          podcasts
-        </span>
-      </li>
-    {% endif %}
-    {% if podcast.genre_rank %}
-      <li>
-        <span class="genre_rank">
-          #{{ podcast.genre_rank }} in
             {% if podcast.genre.supergenre %}
             <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
               {{ podcast.genre.supergenre }}
@@ -108,72 +32,149 @@ Listen to episodes of {{ podcast.title }} on dopepod
             {% else %}
             <a href="/charts/?genre={{ podcast.genre.url_format }}">
               {{ podcast.genre }}
+              {% endif %}
+            </a>
+          </span>
+        </li>
+        {% endif %}
+        <li>
+          <span class="n_subscribers">
+            {{ podcast.n_subscribers }}
+          </span>
+          <span class="subscriber">
+            subscriber{{ podcast.n_subscribers|pluralize }}
+          </span>
+        </li>
+        <li>
+          <span>
+            Language:
+          </span>
+          <span class="showpod-language">
+            {{ podcast.language }}
+          </span>
+        </li>
+        <li>
+          <span>
+            Content:
+          </span>
+          <span class="showpod-explicit">
+            {% if podcast.explicit %}
+            explicit
+            {% else %}
+            clean
             {% endif %}
-          </a>
+          </span>
+        </li>
+        <li>
+          <em>
+            <span class="showpod-copyright">
+              {{ podcast.copyrighttext }}
+            </span>
+          </em>
+        </li>
+      </ul>
+    </div>
+    <div class="col-8 col-lg-6" id="showpod-c" data-podid="{{ podcast.podid }}">
+      <h1 id="showpod-title">
+        {{ podcast.title }}
+      </h1>
+      <h2 id="showpod-artist">
+        <span>
+          By
         </span>
-      </li>
-    {% endif %}
-    <li>
-      <span class="n_subscribers">
-        {{ podcast.n_subscribers }}
-      </span>
-      <span class="subscriber">
-        subscriber{{ podcast.n_subscribers|pluralize }}
-      </span>
-    </li>
-    {% if not podcast.genre_rank and not podcast.global_rank %}
-      <li>
-        <span class="genre_rank">
-          Genre:
-          {% if podcast.genre.supergenre %}
+        {{ podcast.artist }}
+      </h2>
+      <p id="showpod-description">
+        {{ podcast.description }}
+      </p>
+    </div>
+    <div class="col-lg-2 d-none d-lg-block" id="showpod-r">
+      <ul class="showpod-side-list">
+        {% if podcast.global_rank %}
+        <li>
+          <span class="global_rank">
+            #{{ podcast.global_rank }} in
+            podcasts
+          </span>
+        </li>
+        {% endif %}
+        {% if podcast.genre_rank %}
+        <li>
+          <span class="genre_rank">
+            #{{ podcast.genre_rank }} in
+            {% if podcast.genre.supergenre %}
             <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
               {{ podcast.genre.supergenre }}
             </a>
-          {% else %}
+            {% else %}
+            <a href="/charts/?genre={{ podcast.genre.url_format }}">
+              {{ podcast.genre }}
+              {% endif %}
+            </a>
+          </span>
+        </li>
+        {% endif %}
+        <li>
+          <span class="n_subscribers">
+            {{ podcast.n_subscribers }}
+          </span>
+          <span class="subscriber">
+            subscriber{{ podcast.n_subscribers|pluralize }}
+          </span>
+        </li>
+        {% if not podcast.genre_rank and not podcast.global_rank %}
+        <li>
+          <span class="genre_rank">
+            Genre:
+            {% if podcast.genre.supergenre %}
+            <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
+              {{ podcast.genre.supergenre }}
+            </a>
+            {% else %}
             <a href="/charts/?genre={{ podcast.genre.url_format }}">
               {{ podcast.genre }}
             </a>
-          {% endif %}
-        </span>
-      </li>
-    {% endif %}
-    <li>
-      <span>
-        Content:
-      </span>
-      <span class="showpod-explicit">
-        {% if podcast.explicit %}
-        explicit
-        {% else %}
-        clean
-        {% endif %}
-      </span>
-    </li>
-    <li>
-      <a class="showpod-podcastUrl" href="{{ podcast.podcastUrl }}">
-      <span>
-        Podcast website
-      </span>
-      </a>
-    </li>
-    <li>
-      <a class="showpod-feedUrl" href="{{ podcast.feedUrl }}">
-        <span >
-          Podcast RSS feed
-        </span>
-        </a>
-      </li>
-      <li>
-        <em>
-          <span id="showpod-copyright">
-            {{ podcast.copyrighttext }}
+            {% endif %}
           </span>
-        </em>
+        </li>
+        {% endif %}
+        <li>
+          <span>
+            Content:
+          </span>
+          <span class="showpod-explicit">
+            {% if podcast.explicit %}
+            explicit
+            {% else %}
+            clean
+            {% endif %}
+          </span>
+        </li>
+        <li>
+          <a class="showpod-podcastUrl" href="{{ podcast.podcastUrl }}">
+            <span>
+              Podcast website
+            </span>
+          </a>
+        </li>
+        <li>
+          <a class="showpod-feedUrl" href="{{ podcast.feedUrl }}">
+            <span >
+              Podcast RSS feed
+            </span>
+          </a>
+        </li>
+        <li>
+          <em>
+            <span id="showpod-copyright">
+              {{ podcast.copyrighttext }}
+            </span>
+          </em>
+        </li>
       </li>
-    </li>
-  </ul>
-</div>
-<div class="col-auto" id="showpod-options">
+    </ul>
+  </div>
+    <div class="col-auto" id="showpod-options">
   {% if user.is_authenticated %}
     <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}" method="POST">
       {% csrf_token %}
@@ -198,5 +199,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
       Reviews
     </span>
   </button>
+</div>
+  </div>
 </div>
 {% endblock %}
