--- a/index/static/style.css
+++ b/index/static/style.css
@@ -137,39 +137,14 @@ a:hover {
   background: rgba(255, 255, 255, .5);
 }
 
-
-/* NAVBAR */
-#navbar {
-  height: 36px;
-  padding: 0;
-  z-index: 95;
-}
-#navbar .nav-link-dope {
-  color: #fff;
-}
-#navbar .nav-link-dope:hover {
-}
-#navbar-l {
-  display: inline-flex;
-}
-#navbar-c {
-  padding: 4px;
-}
-#navbar-r {
-  display: inline-flex;
-  justify-content: flex-end;
-}
-#navbar-drop {
-  padding: 0;
-}
 .nav-link-dope  {
   font-weight: 600;
   background: none!important;
   display: inline-block;
   border: none;
-  color: rgba(0, 0, 0, 1);
+  color: rgb(46, 46, 46);
   font-size: 16px;
-  padding: 8px 5px 3px 5px;
+  padding: 8px 5px;
   transition: all .25s ease-in-out;
   -moz-transition: all .25s ease-in-out;
   -webkit-transition: all .25s ease-in-out;
@@ -807,10 +782,11 @@ a:hover {
 
 /* PODINFO */
 #showpod {
-  padding: 10px 0;
+  padding: 15px 0;
 }
 #showpod-c {
   overflow: hidden;
+  height: 340px;
   padding: 0 10px 0 0;
 }
 #showpod-l {
@@ -838,7 +814,7 @@ a:hover {
   box-shadow: rgba(0,0,0,.5) 0 0 20px;
 }
 .showpod-image {
-  position: relative;
+  position: static;
   border-radius: .25rem;
   width: fit-content;
   height: fit-content;
@@ -1150,7 +1126,7 @@ a:hover {
 }
 .last-played {
   margin-top: 15px;
-  margin-bottom: 15px
+  margin-bottom: 15px;
 }
 .last-played a {
   color: rgb(46, 46, 46);
