--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -5,19 +5,11 @@ dopepod
 {% endblock %}
 
 {% block center-stage %}
-<div class="col" id="login">
+<div class="col results">
   <div id="login-wrapper">
     <h1>
       Search for and listen to thousands of free podcasts on
     </h1>
-    <div class="splash-logo noselect color-3">
-      <span class="char char-1">d</span>
-      <span class="char char-2">o</span>
-      <span class="char char-3">p</span>
-      <span class="char char-4">e</span>
-      <span class="char char-5">p</span>
-      <span class="char char-6">o</span>
-    </div>
     <div class="tab-content">
       {% if view == 'signup' %}
         <div class="tab-pane fade" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
